	* Fixed bug #9665: t3lib_BEfunc has a lot of hanging SQL record sets
	* Fixed bug #9664: EM fails on retrieving files of uppercase extension keys (thanks to Marcus Krause)
	* Added feature #7571: FeUsers in table sys_lockedrecords (thanks to Stefan Geith)
	* Added feature #8523: IRRE - Integrate possibility to define enabledControls in TCA

2008-10-24  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #9575: Return boolean value instead of filtered data

2008-10-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9613: htmlArea RTE uses JScodeLibArray to insert CSS

2008-10-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #8636: Hardcoded labels in Configuration module (thanks to Christopher Stelmaszyk)
	* Fixed bug #8505: String "File/Files" in Fileadmin are hardcoded (thanks to Stefano Kowalke)

2008-10-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #5019: htmlArea RTE hangs while editing link in Firefox

2008-10-21  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9553: Form validation script jsfunc.validateform.js sometimes fails in IE (thanks to Vladimir Podkovanov)
	* Fixed bug #9608: Frontend Editing does not work anymore

2008-10-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE manual

2008-10-20  Ingo Renner  <ingo@typo3.org>

	* !!! Added feature 9505: Make the caches in TYPO3 use the new caching framework

2008-10-20  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Removed GPLv3 release of extJS from typo3/contrib/extJS/
	* Cleanup: Fixed ChangeLog

2008-10-20  Michael Stucki  <michael@typo3.org>

	* Follow-up on feature #8899: Rename "options.fileTree.uploadFieldsInLinkBrowser" to "options.folderTree.uploadFieldsInLinkBrowser" (patch by Steffen Kamper)

2008-10-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9398: Labels in Module User Administration are hardcoded (thanks to Christopher Stelmaszyk)

2008-10-19  Ingo Renner  <ingo@typo3.org>
